--- a/style.css
+++ b/style.css
@@ -1,7 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poiret+One&display=swap');
+
 body{
+    font-family: 'Indie Flower', cursive;
+    font-family: 'Poiret One', cursive;
     text-align: center;
-    background: rgb(208, 241, 208) ;
+    background: linear-gradient(#b7b4aa, #f7d609) ;
+    margin: 0;
+}
+header {
+    padding: 20px 0;
+}
+.caixa {
+    display: inline;
+    position: relative;
+    width: 800px;
+    margin: 0 auto;
+}
+h3 {
+    text-align: left;
+}
+.imagem-logo {
+    width: 10%;
+    margin-left: 18px;
+    border-radius: 90px;
+    box-shadow: 2px 2px 2px #111111;
+}
+nav {
+    position: absolute;
+    top: 90px;
+    right: 65px;
+}
+nav a {
+    font-size: 20px;
+    padding-left: 20px;
+    color: #131313;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+nav a:hover{
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 2px 3px 5px rgb(255, 129, 129);
+    color: #f7d609;
+    transition: 0.5s;
+
+}
+.principal h1 {
+    font-size: 65px;
+}
+p{
+    font-size: 25px;
+    font-weight: 600;
+    color: black;
+}
+.principal p {
+    margin-left: 256px;
+    margin-right: 256px;
 }
 .capa {
     width: 100%;
+}
+.beneficios {
+    text-align: left;
+}
+.beneficios h2 {
+    font-size: 48px;
+    text-align: center;
+}
+ul {
+    display: inline-block;
+    width: 40%;
+    vertical-align: top;
+    margin: 80px 150px 20px 150px;
+}
+ul li {
+    font-weight: 600;
+    font-size: 25px;
+    padding: 20px;
+    
+}
+.foto-beneficios {
+    width: 25%;
+    border-radius: 15%;
 }
